--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "pm2 start .pm2.json",
     "start:debug": "SILEX_DEBUG=true node dist/server/server.js",
     "build": "npm run build:css && npm run build:html && npm run build:js:release && npm run build:prodotype",
-    "build:prodotype": "cd node_modules/prodotype/ && npm i && npm run build && cd ../../ && rm -rf dist/client/libs/prodotype && cp -R node_modules/prodotype/pub dist/client/libs/prodotype",
+    "build:prodotype": "cd node_modules/prodotype/ && npm run build && cd ../../ && rm -rf dist/client/libs/prodotype && cp -R node_modules/prodotype/pub dist/client/libs/prodotype",
+    "init:prodotype": "cd node_modules/prodotype/ && npm i && cd ../../",
     "build:css": "node_modules/.bin/lessc src/css/_styles.less dist/client/css/admin.css --source-map",
     "build:html": "node_modules/.bin/jade src/html/index.jade --out dist/client/ --no-debug",
     "build:js:release": "java -jar node_modules/superstartup-closure-compiler/build/es6compiler.jar --js submodules/closure-library/closure/goog/ --js src/js/ --externs src/externs.js --js_output_file dist/client/js/admin.js --compilation_level ADVANCED_OPTIMIZATIONS --warning_level=VERBOSE --language_in ECMASCRIPT6_STRICT --language_out ECMASCRIPT3 --create_source_map dist/client/js/admin.js.map --closure_entry_point silex.App --only_closure_dependencies --manage_closure_dependencies --define=\"goog.DEBUG=false\"",
@@ -37,7 +38,7 @@
     "lint:server:inactive": "echo \"FIXME PRECOMMIT HOOK: FIX ISSUES OF 'npm run lint:server' AND THEN ACTIVATE IT AGAIN IN PRECOMMIT HOOK\"",
     "lint:server": "eslint dist/server/",
     "fix:js": "submodules/closure-linter/closure_linter/fixjsstyle.py -r src/js/ && submodules/closure-linter/closure_linter/gjslint.py --max_line_length=200 src/js/**/*.js",
-    "postinstall": "npm run build",
+    "postinstall": "npm run init:prodotype && npm run build",
     "test": "SILEX_DEBUG=true node_modules/.bin/mocha --phantomjs test/functional/file-explorer.js test/functional/save.js test/functional/publish.js",
     "selenium:start": "node_modules/.bin/selenium"
   },
