--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "Silex",
   "description": "Free and easy website builder for everyone.",
+  "<-- be careful": "version is used in BackwardCompat.js -->",
   "version": "2.2.7",
-  "<---------- be careful": "this is used in BackwardCompat.js",
+  "<-- ": "version is used in BackwardCompat.js -->",
   "author": "Alex Hoyau <a.hoyau@silexlabs.org> (https://lexoyo.me/)",
   "contributors": [
     "Thomas Fetiveau aka zabojad"
@@ -39,31 +40,28 @@
     "start:electron": "SILEX_ELECTRON=true electron ."
   },
   "dependencies": {
-    "bluebird": "^3.5.1",
+    "bluebird": "3.5.1",
     "body-parser": "1.13.3",
     "cloud-explorer": "github:silexlabs/CloudExplorer2#master",
     "compression": "1.5.2",
-    "connect-fs2": "*",
-    "connect-multiparty": "2.0.0",
     "cookie-parser": "1.3.5",
-    "cookie-session": "^2.0.0-beta.2",
+    "cookie-session": "2.0.0-beta.2",
     "express": "4.16.0",
-    "express-force-ssl": "^0.3.2",
-    "jsdom": "^11.3.0",
+    "express-force-ssl": "0.3.2",
+    "jsdom": "11.3.0",
     "prodotype": "github:silexlabs/Prodotype",
-    "promise-sequential": "^1.1.1",
+    "promise-sequential": "1.1.1",
     "request": "2.81.0",
-    "serve-static": "^1.12.3",
+    "serve-static": "1.12.3",
     "silex-blank-templates": "github:silexlabs/silex-blank-templates#717e228",
     "silex-templates": "github:silexlabs/silex-templates#f9c2dcb"
   },
   "devDependencies": {
-    "assert": "1.3.0",
-    "cross-env": "^5.1.1",
-    "electron": "^1.6.5",
+    "cross-env": "5.1.1",
+    "electron": "1.6.5",
     "eslint": "1.0.0",
-    "google-closure-compiler": "^20170218.0.0",
-    "google-closure-library": "^20170218.0.1",
+    "google-closure-compiler": "20170218.0.0",
+    "google-closure-library": "20170218.0.1",
     "jade": "1.11.0",
     "less": "2.7.1",
     "pm2": "1.1.3",
