--- a/package.json
+++ b/package.json
@@ -27,14 +27,13 @@
     "build:prodotype": "prodotype src/prodotype/components dist/client/libs/prodotype/components/ && prodotype src/prodotype/styles dist/client/libs/prodotype/styles/",
     "build:css": "lessc src/css/_styles.less dist/client/css/admin.css --source-map",
     "build:html": "jade src/html/index.jade --out dist/client/ --no-debug",
-    "init:prodotype": "cross-env mkdir -p dist/client/libs/prodotype/components && cross-env cp `node_modules prodotype`/prodotype/pub/prodotype.js `node_modules prodotype`/prodotype/pub/prodotype-logo-small.png dist/client/libs/prodotype/",
     "build:js:release": "java -jar `node_modules google-closure-compiler`/google-closure-compiler/compiler.jar --js `node_modules google-closure-library`/google-closure-library/closure/goog/ --js src/js/ --externs src/externs.js --js_output_file dist/client/js/admin.js --compilation_level ADVANCED_OPTIMIZATIONS --warning_level=VERBOSE --language_in ECMASCRIPT6_STRICT --language_out ECMASCRIPT5 --create_source_map dist/client/js/admin.js.map --closure_entry_point silex.App --only_closure_dependencies --define=\"goog.DEBUG=false\"",
     "build:js:debug": "java -jar `node_modules google-closure-compiler`/google-closure-compiler/compiler.jar --debug --js `node_modules google-closure-library`/google-closure-library/closure/goog/ --js src/js/ --externs src/externs.js --js_output_file dist/client/js/admin.js --compilation_level ADVANCED_OPTIMIZATIONS --warning_level=VERBOSE --language_in ECMASCRIPT6_STRICT --language_out ECMASCRIPT5 --create_source_map dist/client/js/admin.js.map --closure_entry_point silex.App --only_closure_dependencies --define=\"goog.DEBUG=true\" && echo \"//# sourceMappingURL=/js/admin.js.map\" >> dist/client/js/admin.js ",
     "watch:server": "watch 'npm run lint:server' dist/server/",
     "watch:client": "watch 'npm run build:css && npm run build:html && npm run build:prodotype && npm run build:js:debug && npm run lint:js' src/",
     "lint:js": "eslint src/js/",
     "lint:server": "eslint dist/server/",
-    "postinstall": "npm run init:prodotype && npm run build",
+    "postinstall": "npm run build",
     "start:electron": "SILEX_ELECTRON=true electron ."
   },
   "dependencies": {
