--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build:html": "jade src/html/index.jade --out dist/client/ --no-debug",
     "build:js:release": "java -jar `node_modules google-closure-compiler`/google-closure-compiler/compiler.jar --js `node_modules google-closure-library`/google-closure-library/closure/goog/ --js src/js/ --externs src/externs.js --js_output_file dist/client/js/admin.js --compilation_level ADVANCED_OPTIMIZATIONS --warning_level=VERBOSE --language_in ECMASCRIPT6_STRICT --language_out ECMASCRIPT5 --create_source_map dist/client/js/admin.js.map --closure_entry_point silex.App --only_closure_dependencies --define=\"goog.DEBUG=false\"",
     "build:js:debug": "java -jar `node_modules google-closure-compiler`/google-closure-compiler/compiler.jar --debug --output_manifest manifest --js `node_modules google-closure-library`/google-closure-library/closure/goog/ --js src/js/ --externs src/externs.js --js_output_file dist/client/js/admin.js --compilation_level ADVANCED_OPTIMIZATIONS --warning_level=VERBOSE --language_in ECMASCRIPT6_STRICT --language_out ECMASCRIPT5 --create_source_map dist/client/js/admin.js.map --closure_entry_point silex.App --only_closure_dependencies --define=\"goog.DEBUG=true\" && echo \"//# sourceMappingURL=/js/admin.js.map\" >> dist/client/js/admin.js ",
-    "build:ts": "tsc converted/src/js/app.ts",
+    "build:ts": "tsc",
     "watch:server": "watch 'npm run lint:server' dist/server/",
     "watch:client": "watch 'npm run build:css && npm run build:html && npm run build:prodotype && npm run build:js:debug && npm run lint:js' src/",
     "lint:js": "eslint src/js/",
@@ -43,6 +43,7 @@
     "bluebird": "3.5.1",
     "body-parser": "^1.18.2",
     "clang-format": "^1.2.4",
+    "closure-library.ts": "^1.0.0",
     "cloud-explorer": "github:silexlabs/CloudExplorer2#master",
     "compression": "1.7.2",
     "cookie-parser": "1.4.3",
