constants shared client server, wip debug ts

--- a/tsconfig-server-debug.json
+++ b/tsconfig-server-debug.json
@@ -3,12 +3,13 @@
   "compilerOptions": {
     "outDir": "dist/server/",
     "target": "es6",
-    "sourceRoot": "./src/server",
     "watch": true,
-    // "sourceMap": true,
-    "inlineSourceMap": true,
+    "sourceMap": true,
     "module": "commonjs",
     "removeComments": false,
+    "paths": {
+      "@shared/*": ["src/*"],
+    },
   },
   "include": [
     "src/server/silex_electron.ts",
