--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "contributors": [
     "Jean-Baptiste Richardet <jeanbaptiste.richardet@gmail.com> (https://github.com/JbIPS)"
   ],
-  "main": "dist/server/index.js",
+  "main": "dist/server/silex_web.js",
   "license": "GPL-3.0",
   "engines": {
     "node": "8.10.x",
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "ace-builds": "^1.4.3",
-    "alertify": "^0.3.0",
+    "alertifyjs": "^1.11.2",
     "bluebird": "3.5.1",
     "body-parser": "^1.18.2",
     "clang-format": "^1.2.4",
@@ -64,8 +64,9 @@
     "wysihtml": "^0.6.0-beta1"
   },
   "devDependencies": {
-    "@types/alertify": "^0.3.30",
     "@types/ace": "0.0.42",
+    "@types/alertify": "^0.3.30",
+    "@types/node": "^11.11.7",
     "electron": "^1.8.8",
     "electron-builder": "^20.28.2",
     "eslint": "^5.10.0",
