cleanup build process and libs

--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,8 @@
 .cache
 node_modules
 *.log
-dist/server/sessions
-dist/client/debug.html
-dist/client/index.html
-dist/client/js/debug.js
-dist/client/js/admin*
-dist/client/css/admin*
-dist/client/libs/templates*
-dist/client/libs/prodotype*
-dist/client/libs/wysihtml*
-dist/client/functional-tests/publish
-dist/client/functional-tests/editable.html
-test/selenium-server-standalone-2.37.0.jar
 .vscode
+dist/client
+dist/server
+dist/prodotype
+dist/html
