--- a/tsconfig-server-release.json
+++ b/tsconfig-server-release.json
@@ -5,7 +5,7 @@
     "target": "es6",
     "watch": false,
     "sourceMap": false,
-    "module": "es6",
+    "module": "commonjs",
     "removeComments": true,
   },
   "include": [
