--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "contributors": [
     "Jean-Baptiste Richardet <jeanbaptiste.richardet@gmail.com> (https://github.com/JbIPS)"
   ],
-  "main": "dist/server/silex_web.js",
+  "main": "dist/server/server/silex_web.js",
   "license": "GPL-3.0",
   "engines": {
     "node": "8.10.x",
@@ -19,14 +19,16 @@
     "lint:server"
   ],
   "scripts": {
-    "start": "node dist/server/silex_web.js",
-    "start:debug": "cross-env SILEX_DEBUG=true nodemon dist/server/silex_web.js",
+    "start": "node dist/server/server/silex_web.js",
+    "start:debug": "cross-env SILEX_DEBUG=true nodemon dist/server/server/silex_web.js",
     "start:electron": "SILEX_ELECTRON=true electron .",
-    "build": "npm run build:css && npm run build:html && npm run build:prodotype && npm run build:client:release && npm run build:server:release",
+    "build": "npm run build:css:release && npm run build:html && npm run build:prodotype && npm run build:client:release && npm run build:server:release",
     "release": "electron-builder",
-    "build:prodotype": "mkdir -p dist/client/libs/prodotype/components &&  prodotype src/prodotype/components dist/client/libs/prodotype/components/ && prodotype src/prodotype/styles dist/client/libs/prodotype/styles/",
-    "build:css": "lessc src/css/_styles.less dist/client/css/admin.css --source-map",
-    "build:html": "pug src/html/index.jade --out dist/client/ --no-debug",
+    "build:prodotype": "mkdir -p dist/prodotype/components &&  prodotype src/prodotype/components dist/prodotype/components/ && prodotype src/prodotype/styles dist/prodotype/styles/",
+    "build:css:release": "lessc src/css/_styles.less dist/html/css/admin.css",
+    "build:css:debug": "lessc src/css/_styles.less dist/html/css/admin.css --source-map",
+    "build:html": "pug src/html/index.jade --out dist/html/ --no-debug",
+    "build:html:debug": "pug src/html/index.jade --out dist/html/",
     "build:client:release": "tsc -p tsconfig-client-release.json",
     "build:client:debug": "tsc -p tsconfig-client-debug.json",
     "build:server:release": "tsc -p tsconfig-server-release.json",
