--- a/tsconfig-client-debug.json
+++ b/tsconfig-client-debug.json
@@ -1,9 +1,8 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "outDir": "dist/client/js/",
+    "outDir": "dist/client/",
     "target": "es6",
-    "sourceRoot": "./src/ts",
     "watch": true,
     "sourceMap": true,
     "module": "es6",
