--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build:css:release": "lessc src/css/_styles.less dist/html/css/admin.css",
     "build:css:debug": "lessc src/css/_styles.less dist/html/css/admin.css --source-map",
     "build:html": "pug src/html/index.jade --out dist/html/ --no-debug",
-    "build:html:debug": "pug src/html/index.jade --out dist/html/",
+    "build:html:debug": "pug src/html/debug.jade --out dist/html/",
     "build:client:release": "tsc -p tsconfig-client-release.json",
     "build:client:debug": "tsc -p tsconfig-client-debug.json",
     "build:server:release": "tsc -p tsconfig-server-release.json",
@@ -60,7 +60,7 @@
     "pug-cli": "^1.0.0-alpha6",
     "request": "2.85.0",
     "serve-static": "1.13.2",
-    "silex-blank-templates": "github:silexlabs/silex-blank-templates#39a9f21e18dedd3e38cf09daea873f1e3789ab48",
+    "silex-blank-templates": "github:silexlabs/silex-blank-templates#67a90220873251c96b8f3608615ea58075422505",
     "silex-templates": "github:silexlabs/silex-templates#6566dde0f6b3f00dcefc84379a8f90710def57ed",
     "typescript": "^3.3.3333",
     "wysihtml": "^0.6.0-beta1"
@@ -72,6 +72,7 @@
     "electron": "^1.8.8",
     "electron-builder": "^20.28.2",
     "eslint": "^5.10.0",
+    "source-map-support": "^0.5.11",
     "watch": "1.0.2"
   },
   "repository": {
