--- a/tsconfig-server-debug.json
+++ b/tsconfig-server-debug.json
@@ -4,7 +4,7 @@
     "outDir": "dist/server/",
     "target": "es6",
     "watch": true,
-    "sourceMap": true,
+    "inlineSourceMap": true,
     "module": "commonjs",
     "removeComments": false,
   },
