--- a/tsconfig-client-release.json
+++ b/tsconfig-client-release.json
@@ -7,6 +7,7 @@
     "sourceMap": false,
     "module": "es6",
     "removeComments": true,
+    "moduleResolution": "node",
   },
   "include": [
     "src/client/App.ts"
