--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint:server"
   ],
   "scripts": {
+    "webpack": "webpack --config webpack.config.js",
     "start": "node dist/server/server/silex_web.js",
     "start:debug": "cross-env SILEX_DEBUG=true nodemon dist/server/server/silex_web.js",
     "start:electron": "SILEX_ELECTRON=true electron .",
@@ -29,8 +30,8 @@
     "build:css:debug": "lessc src/css/_styles.less dist/html/css/admin.css --source-map",
     "build:html": "pug src/html/index.jade --out dist/html/ --no-debug",
     "build:html:debug": "pug src/html/debug.jade --out dist/html/",
-    "build:client:release": "npm run workaround-babel && tsc -p tsconfig-client-release.json",
-    "build:client:debug": "npm run workaround-babel && tsc -p tsconfig-client-debug.json",
+    "build:client:release": "webpack --config webpack.config.js",
+    "build:client:debug": "webpack --config webpack.config.js --watch",
     "build:server:release": "npm run workaround-babel && tsc -p tsconfig-server-release.json",
     "build:server:debug": "npm run workaround-babel && tsc -p tsconfig-server-debug.json",
     "postinstall": "npm run build",
@@ -39,6 +40,7 @@
   },
   "dependencies": {
     "stage": "github:lexoyo/stage#master",
+    "redux": "^4.0.1",
     "ace-builds": "^1.4.3",
     "alertifyjs": "^1.11.2",
     "bluebird": "3.5.1",
@@ -75,7 +77,10 @@
     "electron": "^1.8.8",
     "electron-builder": "^20.28.2",
     "eslint": "^5.10.0",
-    "source-map-support": "^0.5.11"
+    "source-map-support": "^0.5.11",
+    "ts-loader": "^5.3.3",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0"
   },
   "repository": {
     "type": "git",
