--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "start": "node dist/server/server/silex_web.js",
     "start:debug": "cross-env SILEX_DEBUG=true nodemon dist/server/server/silex_web.js",
     "start:electron": "SILEX_ELECTRON=true electron .",
-    "build": "npm run build:css:release && npm run build:html && npm run build:prodotype && npm run build:client:release && npm run build:server:release",
+    "build": "npm run workaround-stage && npm run build:css:release && npm run build:html && npm run build:prodotype && npm run build:client:release && npm run build:server:release",
     "release": "electron-builder",
     "build:prodotype": "mkdir -p dist/prodotype/components &&  prodotype src/prodotype/components dist/prodotype/components/ && prodotype src/prodotype/styles dist/prodotype/styles/",
     "build:css:release": "lessc src/css/_styles.less dist/html/css/admin.css",
@@ -36,11 +36,13 @@
     "build:server:debug": "npm run workaround-babel && tsc -p tsconfig-server-debug.json",
     "postinstall": "npm run build",
     "workaround-babel": "rm -rf `node_modules`/@types/babel__*",
-    "note: workaround issue:": "https://github.com/facebook/jest/issues/8218"
+    "note: workaround-babel issue:": "https://github.com/facebook/jest/issues/8218",
+    "workaround-stage": "cd node_modules/stage/ && npm i && cd ../../",
+    "note: workaround-stage issue:": "this needs to be done because redux package is not found when installing stage normally"
   },
   "dependencies": {
-    "stage": "github:lexoyo/stage#master",
     "redux": "^4.0.1",
+    "stage": "github:lexoyo/stage#master",
     "ace-builds": "^1.4.3",
     "alertifyjs": "^1.11.2",
     "bluebird": "3.5.1",
@@ -71,6 +73,7 @@
     "wysihtml": "^0.6.0-beta1"
   },
   "devDependencies": {
+    "@types/redux": "^3.6.31",
     "@types/ace": "0.0.42",
     "@types/node": "^11.11.7",
     "electron": "^1.8.8",
