--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
         "nodemon": "2.0.2",
         "npm-watch": "0.6.0",
         "pug-cli": "1.0.0-alpha6",
+        "semver": "^7.3.2",
         "style-loader": "1.1.3",
         "ts-jest": "25.2.1",
         "ts-loader": "6.2.1",
