--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "cleanup": "mkdir -p tmp && mv dist/public tmp/ && rm -rf dist && mv tmp dist",
     "release": "npm run lint && electron-builder",
     "webpack": "webpack --config webpack.config.js",
-    "build:components": "mkdir -p dist/prodotype/components &&  prodotype src/prodotype/components dist/prodotype/components/",
-    "build:prodotype": "npm run build:components && mkdir -p dist/prodotype/styles &&  prodotype src/prodotype/styles dist/prodotype/styles/",
+    "build:components": "",
+    "build:prodotype": "",
     "build:css:release": "lessc src/css/_styles.less dist/html/css/admin.css",
     "build:css:debug": "lessc src/css/_styles.less dist/html/css/admin.css --source-map",
     "build:html": "pug src/html/index.jade --out dist/html/ --no-debug",
