use npm-run-all for windows compat

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "start:electron": "SILEX_ELECTRON=true electron dist/server/server/silex_web.js",
     "prepublishOnly": "npm run build",
     "prepare": "npm run build",
-    "build": "npm run cleanup && npm run lint && npm run build:css:release && npm run build:html && npm run build:prodotype && npm run build:client:release && npm run build:server:release && npm run build:monaco-editor",
+    "build": "run-s cleanup lint build:css:release build:html build:prodotype build:client:release build:server:release build:monaco-editor",
     "cleanup": "mkdir -p tmp && mv dist/public tmp/ && rm -rf dist && mv tmp dist",
     "release": "npm run lint && electron-builder",
     "webpack": "webpack --config webpack.config.js",
@@ -112,6 +112,7 @@
     "monaco-editor": "^0.17.0",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "nodemon": "^1.19.0",
+    "npm-run-all": "^4.1.5",
     "npm-watch": "^0.6.0",
     "pug-cli": "^1.0.0-alpha6",
     "style-loader": "^0.23.1",
