--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "jsdom": "15.0.0",
     "node_modules-path": "*",
     "normalize.css": "^8.0.1",
-    "prodotype": "^1.0.15",
+    "prodotype": "1.0.23",
     "promise-sequential": "1.1.1",
     "redux": "^4.0.1",
     "request": "2.88.0",
