more tests for windows

--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "cleanup": "mkdir -p tmp && mv dist/public tmp/ && rm -rf dist && mv tmp dist",
     "release": "npm run lint && electron-builder",
     "webpack": "webpack --config webpack.config.js",
-    "build:components": "",
-    "build:prodotype": "",
+    "build:components": "mkdir -p dist/prodotype/components &&  prodotype src/prodotype/components dist/prodotype/components/",
+    "build:prodotype": "npm run build:components && mkdir -p dist/prodotype/styles &&  prodotype src/prodotype/styles dist/prodotype/styles/",
     "build:css:release": "lessc src/css/_styles.less dist/html/css/admin.css",
     "build:css:debug": "lessc src/css/_styles.less dist/html/css/admin.css --source-map",
     "build:html": "pug src/html/index.jade --out dist/html/ --no-debug",
@@ -76,7 +76,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "cloud-explorer": "silexlabs/cloud-explorer#master",
+    "cloud-explorer": "2.0.26",
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
     "cookie-session": "2.0.0-beta.3",
